2006-07-28  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-chroot-config.cc (load_data): Fix comment.

2006-07-28  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-session.cc
	(save_termios, restore_termios): Close CTTY fd to prevent fd leak.

2006-07-28  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.cc, schroot/schroot-listmounts.cc,
	schroot/schroot-releaselock.cc, dchroot/dchroot.cc,
	dchroot-dsa/dchroot-dsa.cc: Use schroot_base::run<>.

	* schroot/schroot-base-run.h: New file.  Implement a generic
	templated main routine.

2006-07-28  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-base-main.cc
	(run): Remove locale and gettext setup.

	* schroot/schroot.cc, schroot/schroot-listmounts.cc,
	schroot/schroot-releaselock.cc, dchroot/dchroot.cc,
	dchroot-dsa/dchroot-dsa.cc: Set up locale and gettext message
	catalogue.

2006-07-27  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-auth-conv.h: Update API documentation.

2006-07-27  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-auth.cc
	(authenticate): Split string definition and appending of
	additional parts into multiple statements, for GCC 3.3
	compatibility.

	* sbuild/sbuild-tr1types.h: If using boost::shared_ptr, import
	static_pointer_cast, const_pointer_cast and dynamic_pointer_cast
	into the std::tr1 namespace for GCC 3.3 and 3.4 compatibility.

2006-07-27  Roger Leigh  <rleigh@debian.org>

	* po/de.po: Update German translation.

2006-07-27  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-releaselock.cc, schroot/schroot.cc,
	schroot/schroot-listmounts.cc, sbuild/sbuild-parse-error.h,
	sbuild/sbuild-auth.cc, sbuild/sbuild-auth.h, dchroot/dchroot.cc,
	dchroot-dsa/dchroot-dsa.cc: Fix typo (occured).  Thanks to Jens
	Seidel <jensseidel@users.sf.net> for reporting this.

2006-07-27  Roger Leigh  <rleigh@debian.org>

	* po/LINGUAS: Add de.

	* po/de.po: New file.  German translation from Jens Seidel.

2006-07-27  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-listmounts-main.cc